--- a/Application_01.yaml
+++ b/Application_01.yaml
@@ -25,7 +25,11 @@ Parameters:
     MinLength: 8
     NoEcho: true
 
-# Mappings:
+Mappings:
+  RegionAZ:
+    ap-northeast-1:
+      primary: ap-northeast-1a
+      secondary: ap-northeast-1c
 
 # Conditions:
 
@@ -56,11 +60,11 @@ Resources:
     # DependsOn:
     #   - DBSubnetGroup
     Properties:
-      AllocatedStorage: 20
+      AllocatedStorage: "20"
       DBInstanceClass: db.t2.micro
       AllowMajorVersionUpgrade: true
       AutoMinorVersionUpgrade: true
-      AvailabilityZone: ap-northeast-1a
+      AvailabilityZone: !FindInMap [RegionAZ, !Ref "AWS::Region", primary]
       BackupRetentionPeriod: 7
       # CharacterSetName:
       DBInstanceIdentifier: myRaiseTechPostgreSQL
@@ -71,7 +75,7 @@ Resources:
       # DBSnapshotIdentifier:
       DBSubnetGroupName: !Ref myRaiseTechRdsDBSubnetGroup
       Engine: postgres
-      EngineVersion: 12.2
+      EngineVersion: "12.2"
       # Iops:
       # KmsKeyId:
       # LicenseModel:
@@ -79,7 +83,7 @@ Resources:
       MasterUserPassword: !Ref myRaiseTechRdsDBMasterPassword
       # MultiAZ: true|false
       # OptionGroupName:
-      Port: 5432
+      Port: "5432"
       PreferredBackupWindow: 17:00-03:00
       # PreferredMaintenanceWindow:
       PubliclyAccessible: false
@@ -107,18 +111,17 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::LoadBalancer
     Properties:
       IpAddressType: dualstack
-      LoadBalancerAttributes: # ロードバランサーの属性
-        - LoadBalancerAttributeのリスト
+      # LoadBalancerAttributes: # ロードバランサーの属性
+      #   - # アクセスログ/削除保護/アイドルタイムアウト/ルーティングの制限/クロスゾーン負荷分散の設定
       Name: my-raisetech-alb #ロードバランサーの名前(32文字)
       Scheme: internet-facing
       SecurityGroups:
         - Fn::ImportValue: MyRaiseSample-it-01-SEC-myRaiseTechSecAlb01
-      SubnetMappings:
+      # SubnetMappings:
+      # - SubnetMappingのリスト
+      Subnets:
         - Fn::ImportValue: MyRaiseSample-it-01-myRaiseTechPublicSubnet01a
         - Fn::ImportValue: MyRaiseSample-it-01-myRaiseTechPublicSubnet01c
-        # - SubnetMappingのリスト
-      # Subnets:
-      #   - String
       Tags:
         - Key: Name
           Value: myRaiseTechAlb
@@ -145,7 +148,7 @@ Resources:
       HealthCheckTimeoutSeconds: 5 #2~120,ヘルスチェックで失敗と見なす、ターゲットからレスポンスがない時間(秒単位)
       HealthyThresholdCount: 2 #2~10,非正常なインスタンスが正常であると見なすまでに必要なヘルスチェックの連続成功回数
       Matcher: #ターゲットからの正常なレスポンスを確認するために使用するHTTPコード
-        HttpCode: 200 #ALBの場合、200~499。デフォルトは200
+        HttpCode: "200" #ALBの場合、200~499。デフォルトは200
       Name: myRaiseTechAlb #ターゲットグループの名前
       Port: 80 #ターゲットがトラフィックを受信するポート
       Protocol: HTTP
