--- a/Network_01.yaml
+++ b/Network_01.yaml
@@ -5,8 +5,11 @@ Description: RaisetechSampleForNetWorkLayer
 
 # Parameters:
 
-# Mappings:
-
+Mappings:
+  RegionAZ:
+    ap-northeast-1:
+      primary: ap-northeast-1a
+      secondary: ap-northeast-1c
 # Conditions:
 
 Resources:
@@ -23,7 +26,7 @@ Resources:
   myRaiseTechPublicSubnet01a:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: ap-northeast-1a
+      AvailabilityZone: !FindInMap [RegionAZ, !Ref "AWS::Region", primary]
       VpcId: !Ref myRaiseTechVPC
       CidrBlock: 10.0.0.0/24
       Tags:
@@ -33,7 +36,7 @@ Resources:
   myRaiseTechPrivateSubnet02a:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: ap-northeast-1a
+      AvailabilityZone: !FindInMap [RegionAZ, !Ref "AWS::Region", primary]
       VpcId: !Ref myRaiseTechVPC
       CidrBlock: 10.0.3.0/24
       Tags:
@@ -43,7 +46,7 @@ Resources:
   myRaiseTechPublicSubnet01c:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: ap-northeast-1c
+      AvailabilityZone: !FindInMap [RegionAZ, !Ref "AWS::Region", secondary]
       VpcId: !Ref myRaiseTechVPC
       CidrBlock: 10.0.1.0/24
       Tags:
@@ -53,7 +56,7 @@ Resources:
   myRaiseTechPrivateSubnet02c:
     Type: AWS::EC2::Subnet
     Properties:
-      AvailabilityZone: ap-northeast-1c
+      AvailabilityZone: !FindInMap [RegionAZ, !Ref "AWS::Region", secondary]
       VpcId: !Ref myRaiseTechVPC
       CidrBlock: 10.0.4.0/24
       Tags:
