--- a/Security_01.yaml
+++ b/Security_01.yaml
@@ -34,6 +34,11 @@ Resources:
           FromPort: 22
           ToPort: 22
           CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
+          CidrIp: 0.0.0.0/0
+
       # SecurityGroupEgress: # Outbound
       #   - Security Group Rule
       Tags:
@@ -59,6 +64,10 @@ Resources:
         - IpProtocol: tcp
           FromPort: 443
           ToPort: 443
+          CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
+          FromPort: 3000
+          ToPort: 3000
           CidrIp: 0.0.0.0/0
       Tags:
         - Key: Name
