--- a/Ansible-lesson/test_playbook.yml
+++ b/Ansible-lesson/test_playbook.yml
@@ -6,6 +6,15 @@
   roles:
     - yum_pkg
   tasks:
+    - name: Change interpreter
+      set_fact:
+        ansible_python_interpreter: "/usr/bin/python"
+    - name: Install epel-release
+      yum:
+        name: epel-release
+        state: present
+      become: yes
+
     - name: Install Nginx
       yum:
         name: nginx
