prepare yum module, not exist vars

--- a/Ansible-lesson/roles/yum_pkg/tasks/main.yml
+++ b/Ansible-lesson/roles/yum_pkg/tasks/main.yml
@@ -2,3 +2,9 @@
 - name: hello world
   debug:
     msg: "Hello World!"
+
+- name: yum pkgs install
+  yum:
+    name: { { package } }
+    state: present
+  become: yes
