--- a/Ansible-lesson/test_playbook.yml
+++ b/Ansible-lesson/test_playbook.yml
@@ -3,19 +3,15 @@
   vars:
     ansible_become: yes
     ansible_become_method: sudo
+    hello: "Hello World!"
   roles:
     - yum_pkg
   tasks:
     - name: Change interpreter
       set_fact:
         ansible_python_interpreter: "/usr/bin/python"
-    - name: Install epel-release
-      yum:
-        name: epel-release
-        state: present
-      become: yes
-
-    - name: Install Nginx
-      yum:
-        name: nginx
-        state: present
+    # - name: Install epel-release
+    #   yum:
+    #     name: epel-release
+    #     state: present
+    #   become: yes
