--- a/Ansible-lesson/test_playbook.yml
+++ b/Ansible-lesson/test_playbook.yml
@@ -8,9 +8,9 @@
     - yum_pkg
     - homebrew_install
   tasks:
-    - name: Change interpreter
-      set_fact:
-        ansible_python_interpreter: "/usr/bin/python"
+    # - name: Change interpreter
+    #   set_fact:
+    #     ansible_python_interpreter: "/usr/bin/python"
     # - name: Install epel-release
     #   yum:
     #     name: epel-release
