--- a/Ansible-lesson/test_playbook.yml
+++ b/Ansible-lesson/test_playbook.yml
@@ -1,12 +1,10 @@
 ---
 - hosts: MyRaiseSample-it-01-APP
-  vars:
-    ansible_become: yes
-    ansible_become_method: sudo
-    hello: "Hello World!"
+  vars_files:
+    - whole_vars/base_vars.yml
   roles:
     - yum_pkg
-    - homebrew_install
+    - set_homebrew
   tasks:
     # - name: Change interpreter
     #   set_fact:
@@ -16,3 +14,6 @@
     #     name: epel-release
     #     state: present
     #   become: yes
+    # - name:
+    #   debug:
+    #     msg: "{{ hello }}"
