--- a/Ansible-lesson/roles/set_rails/tasks/set_postgresql.yml
+++ b/Ansible-lesson/roles/set_rails/tasks/set_postgresql.yml
@@ -11,8 +11,8 @@
 
 - name: Insert line
   blockinfile:
-    dest: /home/ec2-user/"{{ app_dir_name }}"/config/environments/development.rb
-    # marker: "# {mark} ANSIBLE MANAGED BLOCK"
+    path: /home/ec2-user/"{{ app_dir_name }}"/config/environments/development.rb
+    marker: "# {mark} ANSIBLE MANAGED BLOCK"
     insertafter: EOF
     block: |
       config.hosts << 'my-raisetech-alb-1107909197.ap-northeast-1.elb.amazonaws.com'
